--- a/environment.yml
+++ b/environment.yml
@@ -1,40 +1,76 @@
 name: subscriber
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - atomicwrites=1.3.0=py37_1
-  - attrs=19.1.0=py37_1
+  - alembic=1.0.11=py_0
+  - aniso8601=6.0.0=py_0
+  - appnope=0.1.0=py37_0
+  - asn1crypto=0.24.0=py37_0
+  - backcall=0.1.0=py37_0
   - blinker=1.4=py_1
-  - ca-certificates=2019.1.23=0
-  - certifi=2019.3.9=py37_0
+  - ca-certificates=2019.6.16=hecc5488_0
+  - certifi=2019.6.16=py37_0
+  - cffi=1.12.3=py37hb5b8e2f_0
+  - chardet=3.0.4=py37_1
   - click=7.0=py37_0
-  - colorama=0.4.1=py37_0
-  - flask=1.0.2=py37_1
+  - cryptography=2.7=py37ha12b0ac_0
+  - decorator=4.4.0=py37_1
+  - flask=1.0.3=py37_0
+  - flask-login=0.4.1=py37_0
   - flask-mail=0.9.1=py_2
-  - flask-sqlalchemy=2.3.2=py37_0
+  - flask-migrate=2.4.0=py37_0
+  - flask-restful=0.3.6=py_1
+  - flask-sqlalchemy=2.4.0=py_0
+  - flask-wtf=0.14.2=py37_1
+  - idna=2.8=py37_0
+  - ipdb=0.12=py_0
+  - ipython=7.5.0=py37h39e3cac_0
+  - ipython_genutils=0.2.0=py37_0
   - itsdangerous=1.1.0=py37_0
+  - jedi=0.13.3=py37_0
   - jinja2=2.10.1=py37_0
-  - krb5=1.16.1=hc04afaa_7
-  - libpq=11.2=h3235a2c_0
-  - markupsafe=1.1.1=py37he774522_0
-  - more-itertools=7.0.0=py37_0
-  - openssl=1.1.1b=he774522_1
+  - krb5=1.16.1=hddcf347_7
+  - libcxx=4.0.1=hcfea43d_1
+  - libcxxabi=4.0.1=hcfea43d_1
+  - libedit=3.1.20181209=hb402a30_0
+  - libffi=3.2.1=h475c297_4
+  - libpq=11.2=h051b688_0
+  - mako=1.0.10=py_0
+  - markupsafe=1.1.1=py37h1de35cc_0
+  - ncurses=6.1=h0a44026_1
+  - openssl=1.1.1c=h1de35cc_1
+  - parso=0.4.0=py_0
+  - pexpect=4.7.0=py37_0
+  - pickleshare=0.7.5=py37_0
   - pip=19.1.1=py37_0
-  - pluggy=0.11.0=py_0
-  - psycopg2=2.7.6.1=py37h7a1dbc1_0
-  - py=1.8.0=py37_0
-  - pytest=4.5.0=py37_0
-  - python=3.7.3=h8c8aaf0_1
+  - prompt_toolkit=2.0.9=py37_0
+  - psycopg2=2.7.6.1=py37ha12b0ac_0
+  - ptyprocess=0.6.0=py37_0
+  - pycparser=2.19=py37_0
+  - pycrypto=2.6.1=py37h1de35cc_1002
+  - pygments=2.4.2=py_0
+  - pyopenssl=19.0.0=py37_0
+  - pysocks=1.7.0=py37_0
+  - python=3.7.3=h359304d_0
+  - python-dateutil=2.8.0=py_0
+  - python-editor=1.0.4=py_0
+  - pytz=2019.1=py_0
+  - readline=7.0=h1de35cc_5
+  - requests=2.22.0=py37_0
   - setuptools=41.0.1=py37_0
-  - six=1.12.0=py37_0
-  - sqlalchemy=1.3.3=py37he774522_0
-  - sqlite=3.28.0=he774522_0
-  - tk=8.6.8=hfa6e2cd_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.15.26706=h3a45250_4
+  - six=1.12.0=py37_1000
+  - sqlalchemy=1.3.5=py37h01d97ff_0
+  - sqlite=3.28.0=ha441bb4_0
+  - tk=8.6.8=ha441bb4_0
+  - traitlets=4.3.2=py37_0
+  - urllib3=1.24.2=py37_0
   - wcwidth=0.1.7=py37_0
-  - werkzeug=0.15.2=py_0
+  - werkzeug=0.15.4=py_0
   - wheel=0.33.4=py37_0
-  - wincertstore=0.2=py37_0
-  - zlib=1.2.11=h62dcd97_3
+  - wtforms=2.2.1=py37_0
+  - xz=5.2.4=h1de35cc_4
+  - zlib=1.2.11=h1de35cc_3
+prefix: /Users/sarboleda/miniconda3/envs/subscriber
+
